# rechunk

./: .dockerignore  .env.example  .gitignore  0_unpack.sh  1_prune.sh  2_create.sh  3_chunk.sh  Dockerfile  MANIFEST.in  _3_chunk_rpm_ostree.sh  action.yml  bazzite.json  check_dupes.sh  create.sh  example_changelog.md  meta.yml  pyproject.toml  readme.md  requirements.txt  run_all.sh  tst.txt  unmount_all.sh
.github/workflows/: build_rechunk.yml  local_test.yml  online_test.yml  online_test_deck.yml  test.yml
builder/: 0001-place-all-etc-files-in-the-last-layer.patch  0001-skip-multiple-packages-check-to-avoid-32bit-packages.patch  0002-switch-to-using-warning-for-packages-with-the-same-n.patch  0003-add-var-lib-support-to-package-mappings.patch  Dockerfile  Dockerfile-action  alias.sh  prepare.sh  requirements.in  requirements.txt
builder/ostree-ext/: 0001-add-contentmeta-option-with-determinism.patch  0001-add-contentmeta-option.patch  0002-add-label-support-to-top-level.patch  0003-force-ordering-in-internal-mappings-does-not-seem-to.patch
builder/rpm-ostree/: 0001-place-all-etc-files-in-the-last-layer-to-avoid-lib32.patch  0002-switch-to-using-warning-for-packages-with-the-same-n.patch
notebooks/: pkg.yml  requirements.in  requirements.txt  rpm_analyze.ipynb
ostree-ext-cli/: Cargo.toml
ostree-ext-cli/src/: main.rs
src/rechunk/: __main__.py  alg.py  fedora.py  meta.yml  model.py  ostree.py  utils.py  walker.py
