[package]
name = "ostree-ext-cli"
version = "0.1.0"
authors = ["Antheas Kapenekakis <git@antheas.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hhd-dev/ostree-ext-cli"
edition = "2021"

[dependencies]
anyhow = "1.0"
ostree-ext = { git = "https://github.com/bootc-dev/bootc/", tag = "v1.1.6", package = "ostree-ext" }
clap = "4.2"
libc = "0.2.92"
tokio = { version = "1", features = ["macros"] }
log = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"